css/main.css
html{
	padding: 0px;
	margin: 0px;
  min-height:100%;/* make sure it is at least as tall as the viewport */
  position:relative;
}

body{
  min-height: 100%;
}

/*
@font-face{
	font-family: 'Kollektif';
	src: url('fonts/Kollektif.ttf') format('truetype');
}

@font-face{
	font-family: 'Norwester';
	src: url('fonts/norwester.otf') format('opentype');
}
*/

#mainContainer{
	background-color: #f7f7f7;
	z-index: 1;
  overflow: scroll;
}

#workPanel1{
  background: url("../images/cherrypicker-mockup.jpg") no-repeat;
  background-size: cover;
}

#workPanel2{
  background: url("../images/friendmap-mockup.jpg") no-repeat;
  background-size: cover;
}

#expandButton span{
  display: block;
  position: absolute;
  height: 1px;
  width: 35%;
  background: #48e59f;
  border-radius: 1px;
  opacity: 1;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .2s ease-in-out;
  -moz-transition: .2s ease-in-out;
  -o-transition: .2s ease-in-out;
  transition: .2s ease-in-out;
}

#expandButton span:nth-child(1) {
  bottom: 17px;
  left: 10px;
  -webkit-transform: rotate(30deg);
  -moz-transform: rotate(30deg);
  -o-transform: rotate(30deg);
  transform: rotate(30deg);
}

#expandButton span:nth-child(2){
  top: 17px;
  left: 10px;
  -webkit-transform: rotate(-30deg);
  -moz-transform: rotate(-30deg);
  -o-transform: rotate(-30deg);
  transform: rotate(-30deg);
}

#expandButton.expanded{
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  transform: rotate(180deg);
}

#navContainer{
	height: 100%;
	width: 80px;
	position: absolute;
	background-color: #323232;
	top: 0px;
	left: 0px;
	z-index: 2;
}

#navbar{
	background-color: #323232;
	z-index: 2;
}

#navIcon{
  width: 60px;
  height: 45px;
  position: relative;
  margin: 50px auto;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .5s ease-in-out;
  -moz-transition: .5s ease-in-out;
  -o-transition: .5s ease-in-out;
  transition: .5s ease-in-out;
  cursor: pointer;
}

#navIcon span{
  display: block;
  position: absolute;
  height: 3px;
  width: 60%;
  background: #818181;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -moz-transform: rotate(0deg);
  -o-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: .25s ease-in-out;
  -moz-transition: .25s ease-in-out;
  -o-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

#navIcon span:nth-child(1) {
  top: 0px;
  left: 12px;
}

#navIcon span:nth-child(2), #navIcon span:nth-child(3) {
  top: 12px;
  left: 12px;
}

#navIcon span:nth-child(4) {
  top: 24px;
  left: 12px;
}

#navIcon.open span:nth-child(1) {
  top: 18px;
  width: 0%;
  left: 50%;
}

#navIcon.open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  transform: rotate(45deg);
}

#navIcon.open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

#navIcon.open span:nth-child(4) {
  top: 18px;
  width: 0%;
  left: 50%;
}

#links, #social{
  margin: 0 30px 30px 0;
}

#links li{
  font-family: 'Work Sans', sans-serif;
  font-size: 180%;
  font-weight: 200;
  letter-spacing: 1px;
  color: #ffffff;
  margin: 30px 0 0 0;
  display: inline-block;
  float: right;
}

#social li{
  font-family: 'Work Sans', sans-serif;
  font-size: 80%;
  font-weight: 200;
  letter-spacing: 1px;
  margin: 10px 0 0 0;
  display: inline-block;
  float: right;
}

.navTitle{
  font-family: 'Work Sans', sans-serif;
  font-weight: 200;
	width: 240px;
	height: 40px;
	font-size: 120%;
	line-height: 40px;
  text-align: right;
  padding-right: 30px;
  z-index: 2;
  color: #ffffff;
}

.notClickable{
  color: #ffffff;
}

.clickableLink{
  width: auto;
  padding-right: 0px;
  position: relative;
  color: white;
  text-decoration: none;
  cursor: pointer;
}

.clickableLink:hover {
  color: white;
}

.clickableLink:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: -5%;
  left: 0;
  background-color: #50FFB1;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.clickableLink:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

#navHamburgerContainer{
	width: 80px;
	height: 80px;
	/*background-color: red;*/
	background-color: #323232;
	position: relative;
  	top: 50%;
  	transform: translateY(-85%);
  	cursor: pointer;
  	z-index: 1;
}

#centerBanner{
	height: 200px;
  background: #48e59f;
  z-index: 0;
}

.bannerElement{
  position: absolute;
}

h1{
  margin: 0px;
  font-family: 'Hind', sans-serif;
  font-size: 400%;
  font-weight: normal;
  letter-spacing: 2px;
}

h2{
  font-family: 'Work Sans', sans-serif;
  font-weight: 200;
  font-size: 100%;
  letter-spacing: 1px;
}

h3{
  font-family: 'Hind', sans-serif;
  font-size: 140%;
  letter-spacing: 3px;
  padding: 0;
  margin: 0;
}

h4{
  font-family: 'Hind', sans-serif;
  font-weight: normal;
  font-size: 110%;
  color: #999999;
  padding: 0;
  margin: 0;
  }

